--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ photos: /static/img/background.jpg
 permalink: pretty
 permalink: /404.html
 repository: Denny
-baseurl: https://javavisites.com
+baseurl: 
 collections:
   data-destination-en:
   data-destination-fr:
