--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ map-page:
 exclude: [README.md]
 email: admin@javavisites.com
 telephone: +628563654032
+telephonedetail: +62-856-365-4032
 facebook: dennyrwa
 fb_app_id: 1814750322179234
 instagram: dennyrwa
