--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ video-text:
   fr: video-text fr <br> video-text fr.
   id: video-text id <br> video-text id.
 intro-desktop-only:
-  en: intro-desktop-only en
+  en: intro-desktop-only ENGGRIS
   fr: intro-desktop-only fr
   id: intro-desktop-only id
 intro-mobile-only:
