--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ author: dennyrwa
 name:
   en: Java Visite
   fr: Java Visites
-  id: Berkunjung ke Jawa
+  id: Java Visites
 address: Jalan Mayor Jendral Sungkono I Tretek Tulungagung
 description:
   en: Java Visites is a web that contains information about a visit to Indonesia especially the island of Java
