--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ watch-call-me:
   fr: Call me
   id: Hubungi Saya
 watch-video-home:
-  en: NQULD1GRoGw
-  fr: NQULD1GRoGw
-  id: NQULD1GRoGw
+  en: jR7HGxDd_8E
+  fr: jR7HGxDd_8E
+  id: jR7HGxDd_8E
 watch-video-button:
   en: WATCH VIDEO
   fr: WATCH VIDEO FR
