--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 author: dennyrwa
 name:
-  en: Java Visite
+  en: Java Visites
   fr: Java Visites
   id: Java Visites
 address: Jalan Mayor Jendral Sungkono I Tretek Tulungagung
