--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name:
   en: Java Visites
   fr: Java Visites
   id: Java Visites
-address: Jalan Mayor Jendral Sungkono I Tretek Tulungagung
+address: Jalan Moh. Yamin I/40 Tertek Tulungagung
 description:
   en: Java Visites is a web that contains information about a visit to Indonesia especially the island of Java
   fr: Java Visites est un site Web qui contient des informations sur une visite en Indonésie en particulier l'île de Java
@@ -13,7 +13,7 @@ footer:
   fr: footer fr [Java Visites](https://javavisites.com)
   id: footer id [Java Visites](https://javavisites.com)
 video-text:
-  en: text ENGGRIS <br> video-text en.
+  en: Your Travelling partner in Indonesia.
   fr: video-text fr <br> video-text fr.
   id: video-text id <br> video-text id.
 intro-desktop-only:
