edit intro desktop

--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ footer:
   id: footer id [Java Visites](https://javavisites.com)
 video-text:
   en: Your Travelling partner in Indonesia.
-  fr: video-text fr <br> video-text fr.
-  id: video-text id <br> video-text id.
+  fr: Les sites sur voyage en Indonésie.
+  id: Teman Travellingmu di Indonesia.
 intro-desktop-only:
   en: intro-desktop-only ENGGRIS
   fr: intro-desktop-only fr
